--- a/Rackspace.Net.UriTemplate/Rackspace.Net.UriTemplate.net40.csproj
+++ b/Rackspace.Net.UriTemplate/Rackspace.Net.UriTemplate.net40.csproj
@@ -48,9 +48,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ArrayExtensions.cs" />
     <Compile Include="NamespaceDoc.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UriTemplate.cs" />
+    <Compile Include="UriTemplateMatch.cs" />
     <Compile Include="UriTemplatePart.cs" />
     <Compile Include="UriTemplatePartExpansion.cs" />
     <Compile Include="UriTemplatePartFragmentExpansion.cs" />
