--- a/Rackspace.Net.UriTemplate/Rackspace.Net.UriTemplate.portable-net40+sl4+wp7+win8.csproj
+++ b/Rackspace.Net.UriTemplate/Rackspace.Net.UriTemplate.portable-net40+sl4+wp7+win8.csproj
@@ -41,9 +41,11 @@
     <AssemblyOriginatorKeyFile>..\..\keys\uritemplate.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="ArrayExtensions.cs" />
     <Compile Include="NamespaceDoc.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UriTemplate.cs" />
+    <Compile Include="UriTemplateMatch.cs" />
     <Compile Include="UriTemplatePart.cs" />
     <Compile Include="UriTemplatePartExpansion.cs" />
     <Compile Include="UriTemplatePartFragmentExpansion.cs" />
