--- a/Rackspace.Net.UriTemplate/Rackspace.Net.UriTemplate.net40.csproj
+++ b/Rackspace.Net.UriTemplate/Rackspace.Net.UriTemplate.net40.csproj
@@ -63,6 +63,7 @@
     <Compile Include="UriTemplatePartQueryExpansion.cs" />
     <Compile Include="UriTemplatePartSimpleExpansion.cs" />
     <Compile Include="UriTemplatePartType.cs" />
+    <Compile Include="UriTemplateTable.cs" />
     <Compile Include="VariableReference.cs" />
   </ItemGroup>
   <ItemGroup>
